--- a/webclient/src/App.css
+++ b/webclient/src/App.css
@@ -14,6 +14,7 @@
 
 .App > div {
   flex-grow: 1;
+  flex-basis: 0;
   border-width: 2px;
   border-color: red;
   border-style: dashed;
@@ -23,7 +24,7 @@
   font-size: 25px;
 }
 
-.App div:first-child {
+.App > div:first-child {
   flex-grow: 2;
 }
 
