--- a/webclient/src/App.css
+++ b/webclient/src/App.css
@@ -21,7 +21,35 @@
   padding-top: 30px;
   text-align: left;
   padding-left: 20px;
+  padding-right: 20px;
   font-size: 25px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.Patients {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.Upper {
+  margin: 0;
+}
+
+.Upper > ul {
+  list-style: none;
+}
+
+.Upper > ul > li:hover {
+  background-color: #F5F5F5;
+}
+
+.AddPatient {
+  margin-top: auto;
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: row;
 }
 
 .App > div:first-child {
